# RENDER

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TASK.md  profile.json
.claude/: CLAUDE.md  MEMORY.md  TASK.md  TASKS.md  settings.json
.claude/agents/: pr_review.md
benchmarks/: after-step1-instrumentation.json  after-step3-pbo.json  after-step4-separable-blur.json  after-step5-ibl-precompute.json  after-step6-ssao-ubo.json  after-step7-uniform-precache.json  baseline.json  post-cleanup.json  pre-cleanup.json
config/: profile.json  scene.json
shaders/: basic.frag  basic.vert  blit.frag  line.frag  line.vert  sky.frag  sky.vert  ssao.frag  ssao.vert  ssao_blur.frag
shaders/bake/: brdf_lut.frag  irradiance.frag  prefilter.frag
shaders/geometry/: pbr.frag
shaders/post/: blit.frag  dof.frag  ssao.frag  ssao_blur_v.frag
src/: camera.cpp  camera.hpp  config.cpp  config.hpp  frustum.hpp  hud.cpp  hud.hpp  main.cpp  menu_osx.hpp  menu_osx.mm  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/camera/: camera.cpp  camera.hpp
src/core/: config.cpp  config.hpp  ssao_kernel.hpp
src/render/: color_pipeline.cpp  color_pipeline.hpp  model.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/ui/: hud.cpp  hud.hpp  menu_osx.hpp  menu_osx.mm
tests/: gl_context.cpp  gl_context.hpp  render_harness.cpp  render_harness.hpp  reporter.cpp  test_aov.cpp  test_camera.cpp  test_config.cpp  test_cpu_math.cpp  test_frustum.cpp  test_mesh.cpp  test_pbr_math.cpp  test_shader.cpp  test_ssao_blur.cpp  test_ssao_math.cpp  test_texture.cpp
tests/shaders/: ssao_blur_2d.frag  test_geom.vert
